# JaxLife

./: CLAUDE.md  README.md  pyproject.toml
docs/: algorithm.md
src/: utils.py  visualizer.py
src/maps/: perlin_map.py
src/robot_brains/: complex_program_brain.py
src/world/: agent.py  bots.py  world.py
